--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>URL Shortner</title>
+  <title>Happy URL Shortner</title>
   <link rel="icon" type="image/x-icon" href="{{url_for('static', filename='1f606.svg')}}">
 
   <link href="{{url_for('static', filename='style.css')}}" rel="stylesheet" type="text/css" />
@@ -15,7 +15,7 @@
 
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">URL</a>
+    <a class="navbar-brand" href="#">Happy URL Shortner</a>
 
  <ul class="nav justify-content-center">
 
