--- a/templates/base.html
+++ b/templates/base.html
@@ -41,8 +41,9 @@
 
 
   <footer class="fixed-bottom text-center w-full justify-content-center bg-primary text-white" >
-    <p>Made With <span>Love</span> by Mayur</p>
-  </footer>
+    <p>Made With <span style="color:red; font-size: 28px"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+      <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
+    </svg></span> by Mayur</p>  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
